welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: value % is not a member of java.awt.Color
			setCouleurBrosse((T(j+dec))%(T.length))
                                                   ^Array2:23: error: value % is not a member of java.awt.Color
		setCouleurBrosse(T(T.length-1+dec)%(T.length))
                                                  ^